option java_package = "com.cloudata.mq";

message Queue {
	optional bytes queue_id = 1;
	optional string scope = 2;
	optional string name = 3;
}

message MessageAttribute {
	optional string name = 1;
	optional string value = 2;
}

message Message {
	optional bytes queue_id = 1;
	optional bytes receipt_handle = 2;
	optional bytes message_id = 3;
	optional bytes body = 4;
	optional bytes message_body_md5 = 5;
	repeated MessageAttribute attribute = 6;
}
